--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,27 @@ body {
   grid-gap: 10px;
 }
 
+.pagination-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pagination-container h1{
+	margin:2%;
+}
+
+.pagination{
+	display: flex;
+}
+
+.paginacion-controladores{
+	margin-botomm: 4%;
+}
+
+.input-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 2%;
+}
